Aux Nav: Fix color scheme for Dark mode. * Also fix feedback color issue in dark mode

--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -5,7 +5,6 @@
 //
 
 $black: #000000 !default;
-$grey: #f7f7f7;
 $box-shadow: rgba(0, 0, 0, 0.12);
 
 $base-svg-path: $black !default;
@@ -305,7 +304,7 @@ $text-color: #111111;
   }
 
   .aux-nav-list-item .site-button {
-    background-color: $grey;
+    background-color: $base-button-color;
     border-radius: 3px;
     border-width: 0;
     box-shadow: 0 1px 2px $box-shadow, 0 3px 10px $box-shadow;
